syntax = "proto3";

package foo;

message MsgDoSomething {
  string sender = 1;
  uint64 amount = 2;
}

message MsgDoSomethingResponse {
  bool success = 1;
}

service Msg {
  rpc DoSomething(MsgDoSomething) returns (MsgDoSomethingResponse);
}